Fix Overlay Height On Mobile Device

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body {
   position: relative;
   max-height: 300px;
   width: 100%;
+  overflow: hidden;
   transition: all 0.5s ease;
   cursor: pointer;
 }
@@ -168,6 +169,9 @@ body {
     font-size: 1rem;
   }
   .nft-author > p {
-    font-size: 1rem;
+    font-size: 0.8rem;
+  }
+  .nft-image {
+    max-height: 300px;
   }
 }
